# superbit-lensing

./: .gitattributes  .gitignore  MCXC_superbit2023_targets.csv  README.md  SuperBIT_target_galactic_coords.csv  env.yaml  env_v1.3.9.yaml  job_ngmixv2.sh  job_script_template.sh  makefile  post_installation.py  pyproject.toml  sblens.yml  setup.py
configs/: forecast_analysis.yaml  gauss-uberseg-meta.yaml  nfw_only_profile.yaml  pipe_test.yaml
data/: MCXC_superbit2023_targets.csv  README.md  SuperBIT_target_list.csv  bit_exposure_summary.fits  cluster_external_match.csv
data/catalogs/: redshifts_and_positions.md  superbit_xray_centers.csv
job_scripts/: README.md  color_color_run.sh  config.sh  make_annular.sh  make_meds.sh  make_meds_sims.sh  master.sh  multiple_ngmixrun.sh  size_mag.sh
job_scripts/ngmix_array_runs/: job1.sh  ngmix_job_template.sh
job_scripts/scripts/: color_color_run.sh  make_annular.sh  make_meds.sh  ngmix_job_template.sh  size_mag.sh
job_sims/: README.md  config.sh  galsim_config.yaml  gen_mocks.sh  make_annular.sh  make_meds_sims.sh  master.sh  multiple_ngmixrun.sh
job_sims/ngmix_array_runs/: ngmix_job_template.sh
job_sims/notebook/: stats.ipynb
job_sims/scripts/: gen_mocks.sh  make_annular.sh  make_meds_sims.sh  ngmix_job_template.sh
notebooks/: footprint.ipynb  ngmixv1_superbit.ipynb  ngmixv2_superbit.ipynb  shear_wcs_drawimage_demo.ipynb
notebooks/colorcut/: Pixel_Mask_Notebook.ipynb  demo_Abell1689.fits  dust.ipynb  galactic_coords.npz
notebooks/kappa_maps/: kappa_inspect.ipynb
notebooks/ngmix/: ngmixv1_superbit.ipynb  ngmixv2_superbit.ipynb
notebooks/red_sequence/: redseq.ipynb
notebooks/simulations/: config.sh  inspect.ipynb  run.sh
psf-diagnostics/: model_diagnostics.py  psf_analysis_functions.py  psf_analysis_runner.py  quick_exp_quality.py  submit_diagnostics.sh
psf-diagnostics/ngmix_em5/: array_job.sh  em5_rho_stats.ipynb  runner.py
psf-diagnostics/psfex/: README.md  model_diagnostics.py
superbit-lensing/analysis/: get_mean_shear_profile.py  psf_checks.py  run_analysis.py
superbit-lensing/galsim/: grid_test.py  job_script_example_della.sh  mock_superBIT_data.py  mock_superBIT_nfw.py
superbit-lensing/metacalibration/: mcal_runner.py  ngmix_fit_superbit3.py  ngmix_v2_fit_superbit.py  run_mcal.py  test_mcal_noise.py
superbit-lensing/ngmix_fit/: ngmix_fit.py
superbit-lensing/shear_profiles/: annular_jmac.py  make_annular_catalog.py  make_annular_catalog_v2.py
superbit_lensing/: diagnostics.py  dust.py  em5.py  match.py  plotter.py  rgb_tools.py  rs_catcher.py  utils.py
superbit_lensing/color/: README.md  color_color.py  color_color_v2.py  color_mag.py  color_mag_final.py  config.sh  sextractor_dual.py  size_mag.py
superbit_lensing/galsim/: galsim_mpi.sh  job_script_example_della.sh  mock_superBIT_data.py  mock_superBIT_data_backcast.py  mock_superBIT_data_forecast.py  mock_superBIT_data_wo_nfw.py  starcat_nedmaker.py
superbit_lensing/metacalibration/: calibrator.py  combine_mcal.py  mcal_runner.py  ngmix_fit.py  ngmix_fit_superbit3.py  ngmix_fit_superbit3_OLD.py  ngmix_v2_fit_superbit.py  utils.py
superbit_lensing/shear_profiles/: annular_jmac.py  annular_jmac2.py  bias.py  make_annular_catalog.py  (+5 more)
utility_scripts/: README.md  SimBlaster.sh  add_smpy_alias.py  cleanup.py  data_downloader.py  dust_utils.py  filechecker.py
(+137 files in other folders)
